# PF-GUGUBot

./: .gitignore  404.html  Config-QQChat.yml  DOCUMENTATION.md  PF-MCDRQQChat.py  README.md  README_old.md  config_default.yml  default_config.yml  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: blank.md  blank.yaml  bug_feedback.md  bug_report.yml  bug反馈-md格式-上传文件和图片推荐-.md  建议.md  空白模板.md
.github/workflows/: docs.yml  sync-default-config.yml  sync-readme.yml
GUGUbot/: README.md  mcdreforged.plugin.json  requirements.txt
GUGUbot/data/: text.py
GUGUbot/gugubot/: __init__.py  ban_word_system.py  base_system.py  bot.py  config.py  key_word_system.py  shenhe_system.py  start_command_system.py  table.py  utils.py  whitelist.py
GUGUbot/gugubot/builder/: __init__.py  basic_builder.py  mc_builder.py  qq_builder.py
GUGUbot/lang/: en_us.yml  zh_cn.yml
GUGUbot/tests/: test_config.py
api/: index.html
configuration/: index.html
docs/: .gitignore  README.md  api.md  configuration.md  features.md  index.md  installation.md  multi-server.md  troubleshooting.md
features/: index.html
future version/: mcdreforged.plugin.json  requirements.txt
future version/CoolQAPI/: CoolQAPI-MCDR.py
future version/GUGUbot/: __init__.py  base_system.py  bot.py  mcdreforged.plugin.json  requirements.txt  shenhe_system.py  text.py
installation/: index.html
multi-server/: index.html
search/: search_index.json
tests/: test_config.py  test_parser.py  test_websocket.py
troubleshooting/: index.html
(+115 files in other folders)
