[project]
name = "pf-gugubot"
version = "2.0.0"
description = "GUGUbot is a MCDR plugin provide connection between MC and QQ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcdreforged>=2.14.7",
    "requests>=2.32.3",
    "ruamel-yaml>=0.18.10",
]

[dependency-groups]
dev = []
