[project]
name = "pf-gugubot"
version = "2.0.0"
description = "GUGUbot is a MCDR plugin provide connection between MC and QQ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcdreforged>=2.14.7",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-material>=9.7.0",
    "pymdown-extensions>=10.17.2",
    "requests>=2.32.3",
    "ruamel-yaml>=0.18.10",
    "websocket>=0.2.1",
]

[dependency-groups]
dev = []
